<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:visibility="visible">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/sign_in">

        <ImageView
            android:contentDescription="@string/img_logo"
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/logotext" />

        <TextView
            android:textColor="#000000"
            android:textStyle="bold"
            android:id="@+id/tvsilahkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivLogo"
            android:layout_marginBottom="50dp"
            android:text="@string/silahkan"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvsilahkan"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:autofillHints="@string/username"
            android:backgroundTint="#000000"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:hint="@string/username"
            android:textColorHint="#0A0A0B"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/etUsername"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:autofillHints="@string/password"
            android:backgroundTint="#000000"
            android:drawableStart="@drawable/ic_password2"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#0A0A0B"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#E9ED5186"
            android:text="@string/sign_in"
            android:textColor="#212121" />

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/create_a_new_account"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>